--- a/jil-alghad-backend/.env
+++ b/jil-alghad-backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/nomDeLaBase
+MONGO_URI=mongodb+srv://jilalghad:jilalghad@cluster0.mongodb.net/Cluster0?retryWrites=true&w=majority
 PORT=5000
 SECRET_KEY=MaSuperCleSecrete
